kubernetes/checkout-cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-cart-deployment
  labels:
    app: checkout-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-cart
  template:
    metadata:
      labels:
        app: checkout-cart
    spec:
      containers:
      - name: checkout-cart
        image: mwpro/pjmicrostore-checkout-cart:20190519-1909
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 250Mi
          requests:
            cpu: 50m
            memory: 100Mi
