kubernetes/external-frontapigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapigateway
spec:
  selector:
    matchLabels:
      app: frontapigateway
  template:
    metadata:
      labels:
        app: frontapigateway
    spec:
      containers:
      - name: frontapigateway
        image: mwpro/pjmicrostore-frontapigateway:20190519-1909
        resources:
          limits:
            cpu: 500m
            memory: 250Mi
          requests:
            cpu: 50m
            memory: 100Mi
        ports:
        - containerPort: 80
