kubernetes/checkout-cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-cart-service
spec:
  selector:
    app: checkout-cart
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
