kubernetes/external-frontapigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontapigateway
spec:
  selector:
    app: frontapigateway
  type: ClusterIP
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
