kubernetes/infrastructure-mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: infrastructure
spec:
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mssql
  namespace: infrastructure
subsets:
  - addresses:
      - ip: 192.168.0.17 # ip of my machine... hmm...
    ports:
      - port: 1433
